[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-llm"
version = "0.1.0"
description = "**🤖💬 Bridge WhatsApp to AI — send a message, get an intelligent response instantly**"
requires-python = ">=3.10"
dependencies = [
    "twilio",
    "openai",
    "fastapi",
    "uvicorn",
    "pyngrok",
    "python-dotenv",
    "python-multipart",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]
